lang.output
Grammar

    0 $accept: prog $end

    1 prog: globalList

    2 globalList: globalList var
    3           | var
    4           | func
    5           | globalList func

    6 var: TYPEINT ID ';'
    7    | TYPEINT ID '=' INT ';'
    8    | TYPEFLOAT ID ';'
    9    | TYPEFLOAT ID '=' INT ';'
   10    | TYPEFLOAT ID '=' DEC ';'
   11    | TYPESTRING ID ';'
   12    | TYPESTRING ID '=' STR ';'

   13 @1: /* empty */

   14 @2: /* empty */

   15 func: TYPESTRING ID @1 '(' paramsList ')' @2 '{' contentList '}'

   16 @3: /* empty */

   17 @4: /* empty */

   18 func: TYPEFLOAT ID @3 '(' paramsList ')' @4 '{' contentList '}'

   19 @5: /* empty */

   20 @6: /* empty */

   21 func: TYPEINT ID @5 '(' paramsList ')' @6 '{' contentList '}'

   22 paramsList: params
   23           | /* empty */

   24 params: param
   25       | param ',' params

   26 param: TYPEINT ID
   27      | TYPEFLOAT ID
   28      | TYPESTRING ID

   29 contentList: content contentList
   30            | /* empty */

   31 content: var
   32        | addValue
   33        | comand
   34        | print
   35        | scan
   36        | return
   37        | callFunc

   38 addValue: ID '=' expression ';'

   39 expression: ID
   40           | INT
   41           | DEC
   42           | STR
   43           | ID op expression
   44           | INT op expression
   45           | DEC op expression
   46           | STR op expression

   47 op: '+'
   48   | '-'
   49   | '/'
   50   | '*'

   51 comand: IF '(' condition ')' '{' contentList '}'
   52       | IF '(' condition ')' '{' contentList '}' ELSE '{' contentList '}'
   53       | WHILE '(' condition ')' '{' contentList '}'

   54 condition: ID cond ID
   55          | ID cond INT
   56          | ID cond DEC
   57          | INT cond ID
   58          | INT cond INT
   59          | INT cond DEC
   60          | DEC cond ID
   61          | DEC cond INT
   62          | DEC cond DEC

   63 cond: CGE
   64     | CGT
   65     | CLE
   66     | CLT
   67     | CNE
   68     | CEQ

   69 print: PRINT '(' ID ')' ';'
   70      | PRINT '(' STR ')' ';'
   71      | PRINT '(' INT ')' ';'
   72      | PRINT '(' DEC ')' ';'

   73 scan: SCAN '(' ID ',' TYPEINT ')' ';'
   74     | SCAN '(' ID ',' TYPEFLOAT ')' ';'
   75     | SCAN '(' ID ',' TYPESTRING ')' ';'

   76 return: RETURN '(' ID ')' ';'
   77       | RETURN '(' STR ')' ';'
   78       | RETURN '(' INT ')' ';'
   79       | RETURN '(' DEC ')' ';'

   80 callFunc: ID '(' callFuncParams ')' ';'
   81         | ID '=' ID '(' callFuncParams ')' ';'
   82         | ID '(' ')' ';'
   83         | ID '=' ID '(' ')' ';'

   84 callFuncParams: ID
   85               | INT
   86               | DEC
   87               | STR
   88               | ID ',' callFuncParams
   89               | INT ',' callFuncParams
   90               | DEC ',' callFuncParams
   91               | STR ',' callFuncParams


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 18 21 51 52 53 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83
')' (41) 15 18 21 51 52 53 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83
'*' (42) 50
'+' (43) 47
',' (44) 25 73 74 75 88 89 90 91
'-' (45) 48
'/' (47) 49
';' (59) 6 7 8 9 10 11 12 38 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83
'=' (61) 7 9 10 12 38 81 83
'{' (123) 15 18 21 51 52 53
'}' (125) 15 18 21 51 52 53
error (256)
ID (258) 6 7 8 9 10 11 12 15 18 21 26 27 28 38 39 43 54 55 56 57 60
    69 73 74 75 76 80 81 82 83 84 88
TYPEINT (259) 6 7 21 26 73
TYPEFLOAT (260) 8 9 10 18 27 74
TYPESTRING (261) 11 12 15 28 75
INT (262) 7 9 40 44 55 57 58 59 61 71 78 85 89
DEC (263) 10 41 45 56 59 60 61 62 72 79 86 90
STR (264) 12 42 46 70 77 87 91
WHILE (265) 53
IF (266) 51 52
ELSE (267) 52
RETURN (268) 76 77 78 79
PRINT (269) 69 70 71 72
SCAN (270) 73 74 75
CGE (271) 63
CGT (272) 64
CLE (273) 65
CLT (274) 66
CNE (275) 67
CEQ (276) 68


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
prog (34)
    on left: 1, on right: 0
globalList (35)
    on left: 2 3 4 5, on right: 1 2 5
var (36)
    on left: 6 7 8 9 10 11 12, on right: 2 3 31
func (37)
    on left: 15 18 21, on right: 4 5
@1 (38)
    on left: 13, on right: 15
@2 (39)
    on left: 14, on right: 15
@3 (40)
    on left: 16, on right: 18
@4 (41)
    on left: 17, on right: 18
@5 (42)
    on left: 19, on right: 21
@6 (43)
    on left: 20, on right: 21
paramsList (44)
    on left: 22 23, on right: 15 18 21
params (45)
    on left: 24 25, on right: 22 25
param (46)
    on left: 26 27 28, on right: 24 25
contentList (47)
    on left: 29 30, on right: 15 18 21 29 51 52 53
content (48)
    on left: 31 32 33 34 35 36 37, on right: 29
addValue (49)
    on left: 38, on right: 32
expression (50)
    on left: 39 40 41 42 43 44 45 46, on right: 38 43 44 45 46
op (51)
    on left: 47 48 49 50, on right: 43 44 45 46
comand (52)
    on left: 51 52 53, on right: 33
condition (53)
    on left: 54 55 56 57 58 59 60 61 62, on right: 51 52 53
cond (54)
    on left: 63 64 65 66 67 68, on right: 54 55 56 57 58 59 60 61 62
print (55)
    on left: 69 70 71 72, on right: 34
scan (56)
    on left: 73 74 75, on right: 35
return (57)
    on left: 76 77 78 79, on right: 36
callFunc (58)
    on left: 80 81 82 83, on right: 37
callFuncParams (59)
    on left: 84 85 86 87 88 89 90 91, on right: 80 81 88 89 90 91


state 0

    0 $accept: . prog $end

    TYPEINT     shift, and go to state 1
    TYPEFLOAT   shift, and go to state 2
    TYPESTRING  shift, and go to state 3

    prog        go to state 4
    globalList  go to state 5
    var         go to state 6
    func        go to state 7


state 1

    6 var: TYPEINT . ID ';'
    7    | TYPEINT . ID '=' INT ';'
   21 func: TYPEINT . ID @5 '(' paramsList ')' @6 '{' contentList '}'

    ID  shift, and go to state 8


state 2

    8 var: TYPEFLOAT . ID ';'
    9    | TYPEFLOAT . ID '=' INT ';'
   10    | TYPEFLOAT . ID '=' DEC ';'
   18 func: TYPEFLOAT . ID @3 '(' paramsList ')' @4 '{' contentList '}'

    ID  shift, and go to state 9


state 3

   11 var: TYPESTRING . ID ';'
   12    | TYPESTRING . ID '=' STR ';'
   15 func: TYPESTRING . ID @1 '(' paramsList ')' @2 '{' contentList '}'

    ID  shift, and go to state 10


state 4

    0 $accept: prog . $end

    $end  shift, and go to state 11


state 5

    1 prog: globalList .
    2 globalList: globalList . var
    5           | globalList . func

    TYPEINT     shift, and go to state 1
    TYPEFLOAT   shift, and go to state 2
    TYPESTRING  shift, and go to state 3

    $default  reduce using rule 1 (prog)

    var   go to state 12
    func  go to state 13


state 6

    3 globalList: var .

    $default  reduce using rule 3 (globalList)


state 7

    4 globalList: func .

    $default  reduce using rule 4 (globalList)


state 8

    6 var: TYPEINT ID . ';'
    7    | TYPEINT ID . '=' INT ';'
   21 func: TYPEINT ID . @5 '(' paramsList ')' @6 '{' contentList '}'

    ';'  shift, and go to state 14
    '='  shift, and go to state 15

    $default  reduce using rule 19 (@5)

    @5  go to state 16


state 9

    8 var: TYPEFLOAT ID . ';'
    9    | TYPEFLOAT ID . '=' INT ';'
   10    | TYPEFLOAT ID . '=' DEC ';'
   18 func: TYPEFLOAT ID . @3 '(' paramsList ')' @4 '{' contentList '}'

    ';'  shift, and go to state 17
    '='  shift, and go to state 18

    $default  reduce using rule 16 (@3)

    @3  go to state 19


state 10

   11 var: TYPESTRING ID . ';'
   12    | TYPESTRING ID . '=' STR ';'
   15 func: TYPESTRING ID . @1 '(' paramsList ')' @2 '{' contentList '}'

    ';'  shift, and go to state 20
    '='  shift, and go to state 21

    $default  reduce using rule 13 (@1)

    @1  go to state 22


state 11

    0 $accept: prog $end .

    $default  accept


state 12

    2 globalList: globalList var .

    $default  reduce using rule 2 (globalList)


state 13

    5 globalList: globalList func .

    $default  reduce using rule 5 (globalList)


state 14

    6 var: TYPEINT ID ';' .

    $default  reduce using rule 6 (var)


state 15

    7 var: TYPEINT ID '=' . INT ';'

    INT  shift, and go to state 23


state 16

   21 func: TYPEINT ID @5 . '(' paramsList ')' @6 '{' contentList '}'

    '('  shift, and go to state 24


state 17

    8 var: TYPEFLOAT ID ';' .

    $default  reduce using rule 8 (var)


state 18

    9 var: TYPEFLOAT ID '=' . INT ';'
   10    | TYPEFLOAT ID '=' . DEC ';'

    INT  shift, and go to state 25
    DEC  shift, and go to state 26


state 19

   18 func: TYPEFLOAT ID @3 . '(' paramsList ')' @4 '{' contentList '}'

    '('  shift, and go to state 27


state 20

   11 var: TYPESTRING ID ';' .

    $default  reduce using rule 11 (var)


state 21

   12 var: TYPESTRING ID '=' . STR ';'

    STR  shift, and go to state 28


state 22

   15 func: TYPESTRING ID @1 . '(' paramsList ')' @2 '{' contentList '}'

    '('  shift, and go to state 29


state 23

    7 var: TYPEINT ID '=' INT . ';'

    ';'  shift, and go to state 30


state 24

   21 func: TYPEINT ID @5 '(' . paramsList ')' @6 '{' contentList '}'

    TYPEINT     shift, and go to state 31
    TYPEFLOAT   shift, and go to state 32
    TYPESTRING  shift, and go to state 33

    $default  reduce using rule 23 (paramsList)

    paramsList  go to state 34
    params      go to state 35
    param       go to state 36


state 25

    9 var: TYPEFLOAT ID '=' INT . ';'

    ';'  shift, and go to state 37


state 26

   10 var: TYPEFLOAT ID '=' DEC . ';'

    ';'  shift, and go to state 38


state 27

   18 func: TYPEFLOAT ID @3 '(' . paramsList ')' @4 '{' contentList '}'

    TYPEINT     shift, and go to state 31
    TYPEFLOAT   shift, and go to state 32
    TYPESTRING  shift, and go to state 33

    $default  reduce using rule 23 (paramsList)

    paramsList  go to state 39
    params      go to state 35
    param       go to state 36


state 28

   12 var: TYPESTRING ID '=' STR . ';'

    ';'  shift, and go to state 40


state 29

   15 func: TYPESTRING ID @1 '(' . paramsList ')' @2 '{' contentList '}'

    TYPEINT     shift, and go to state 31
    TYPEFLOAT   shift, and go to state 32
    TYPESTRING  shift, and go to state 33

    $default  reduce using rule 23 (paramsList)

    paramsList  go to state 41
    params      go to state 35
    param       go to state 36


state 30

    7 var: TYPEINT ID '=' INT ';' .

    $default  reduce using rule 7 (var)


state 31

   26 param: TYPEINT . ID

    ID  shift, and go to state 42


state 32

   27 param: TYPEFLOAT . ID

    ID  shift, and go to state 43


state 33

   28 param: TYPESTRING . ID

    ID  shift, and go to state 44


state 34

   21 func: TYPEINT ID @5 '(' paramsList . ')' @6 '{' contentList '}'

    ')'  shift, and go to state 45


state 35

   22 paramsList: params .

    $default  reduce using rule 22 (paramsList)


state 36

   24 params: param .
   25       | param . ',' params

    ','  shift, and go to state 46

    $default  reduce using rule 24 (params)


state 37

    9 var: TYPEFLOAT ID '=' INT ';' .

    $default  reduce using rule 9 (var)


state 38

   10 var: TYPEFLOAT ID '=' DEC ';' .

    $default  reduce using rule 10 (var)


state 39

   18 func: TYPEFLOAT ID @3 '(' paramsList . ')' @4 '{' contentList '}'

    ')'  shift, and go to state 47


state 40

   12 var: TYPESTRING ID '=' STR ';' .

    $default  reduce using rule 12 (var)


state 41

   15 func: TYPESTRING ID @1 '(' paramsList . ')' @2 '{' contentList '}'

    ')'  shift, and go to state 48


state 42

   26 param: TYPEINT ID .

    $default  reduce using rule 26 (param)


state 43

   27 param: TYPEFLOAT ID .

    $default  reduce using rule 27 (param)


state 44

   28 param: TYPESTRING ID .

    $default  reduce using rule 28 (param)


state 45

   21 func: TYPEINT ID @5 '(' paramsList ')' . @6 '{' contentList '}'

    $default  reduce using rule 20 (@6)

    @6  go to state 49


state 46

   25 params: param ',' . params

    TYPEINT     shift, and go to state 31
    TYPEFLOAT   shift, and go to state 32
    TYPESTRING  shift, and go to state 33

    params  go to state 50
    param   go to state 36


state 47

   18 func: TYPEFLOAT ID @3 '(' paramsList ')' . @4 '{' contentList '}'

    $default  reduce using rule 17 (@4)

    @4  go to state 51


state 48

   15 func: TYPESTRING ID @1 '(' paramsList ')' . @2 '{' contentList '}'

    $default  reduce using rule 14 (@2)

    @2  go to state 52


state 49

   21 func: TYPEINT ID @5 '(' paramsList ')' @6 . '{' contentList '}'

    '{'  shift, and go to state 53


state 50

   25 params: param ',' params .

    $default  reduce using rule 25 (params)


state 51

   18 func: TYPEFLOAT ID @3 '(' paramsList ')' @4 . '{' contentList '}'

    '{'  shift, and go to state 54


state 52

   15 func: TYPESTRING ID @1 '(' paramsList ')' @2 . '{' contentList '}'

    '{'  shift, and go to state 55


state 53

   21 func: TYPEINT ID @5 '(' paramsList ')' @6 '{' . contentList '}'

    ID          shift, and go to state 56
    TYPEINT     shift, and go to state 57
    TYPEFLOAT   shift, and go to state 58
    TYPESTRING  shift, and go to state 59
    WHILE       shift, and go to state 60
    IF          shift, and go to state 61
    RETURN      shift, and go to state 62
    PRINT       shift, and go to state 63
    SCAN        shift, and go to state 64

    $default  reduce using rule 30 (contentList)

    var          go to state 65
    contentList  go to state 66
    content      go to state 67
    addValue     go to state 68
    comand       go to state 69
    print        go to state 70
    scan         go to state 71
    return       go to state 72
    callFunc     go to state 73


state 54

   18 func: TYPEFLOAT ID @3 '(' paramsList ')' @4 '{' . contentList '}'

    ID          shift, and go to state 56
    TYPEINT     shift, and go to state 57
    TYPEFLOAT   shift, and go to state 58
    TYPESTRING  shift, and go to state 59
    WHILE       shift, and go to state 60
    IF          shift, and go to state 61
    RETURN      shift, and go to state 62
    PRINT       shift, and go to state 63
    SCAN        shift, and go to state 64

    $default  reduce using rule 30 (contentList)

    var          go to state 65
    contentList  go to state 74
    content      go to state 67
    addValue     go to state 68
    comand       go to state 69
    print        go to state 70
    scan         go to state 71
    return       go to state 72
    callFunc     go to state 73


state 55

   15 func: TYPESTRING ID @1 '(' paramsList ')' @2 '{' . contentList '}'

    ID          shift, and go to state 56
    TYPEINT     shift, and go to state 57
    TYPEFLOAT   shift, and go to state 58
    TYPESTRING  shift, and go to state 59
    WHILE       shift, and go to state 60
    IF          shift, and go to state 61
    RETURN      shift, and go to state 62
    PRINT       shift, and go to state 63
    SCAN        shift, and go to state 64

    $default  reduce using rule 30 (contentList)

    var          go to state 65
    contentList  go to state 75
    content      go to state 67
    addValue     go to state 68
    comand       go to state 69
    print        go to state 70
    scan         go to state 71
    return       go to state 72
    callFunc     go to state 73


state 56

   38 addValue: ID . '=' expression ';'
   80 callFunc: ID . '(' callFuncParams ')' ';'
   81         | ID . '=' ID '(' callFuncParams ')' ';'
   82         | ID . '(' ')' ';'
   83         | ID . '=' ID '(' ')' ';'

    '='  shift, and go to state 76
    '('  shift, and go to state 77


state 57

    6 var: TYPEINT . ID ';'
    7    | TYPEINT . ID '=' INT ';'

    ID  shift, and go to state 78


state 58

    8 var: TYPEFLOAT . ID ';'
    9    | TYPEFLOAT . ID '=' INT ';'
   10    | TYPEFLOAT . ID '=' DEC ';'

    ID  shift, and go to state 79


state 59

   11 var: TYPESTRING . ID ';'
   12    | TYPESTRING . ID '=' STR ';'

    ID  shift, and go to state 80


state 60

   53 comand: WHILE . '(' condition ')' '{' contentList '}'

    '('  shift, and go to state 81


state 61

   51 comand: IF . '(' condition ')' '{' contentList '}'
   52       | IF . '(' condition ')' '{' contentList '}' ELSE '{' contentList '}'

    '('  shift, and go to state 82


state 62

   76 return: RETURN . '(' ID ')' ';'
   77       | RETURN . '(' STR ')' ';'
   78       | RETURN . '(' INT ')' ';'
   79       | RETURN . '(' DEC ')' ';'

    '('  shift, and go to state 83


state 63

   69 print: PRINT . '(' ID ')' ';'
   70      | PRINT . '(' STR ')' ';'
   71      | PRINT . '(' INT ')' ';'
   72      | PRINT . '(' DEC ')' ';'

    '('  shift, and go to state 84


state 64

   73 scan: SCAN . '(' ID ',' TYPEINT ')' ';'
   74     | SCAN . '(' ID ',' TYPEFLOAT ')' ';'
   75     | SCAN . '(' ID ',' TYPESTRING ')' ';'

    '('  shift, and go to state 85


state 65

   31 content: var .

    $default  reduce using rule 31 (content)


state 66

   21 func: TYPEINT ID @5 '(' paramsList ')' @6 '{' contentList . '}'

    '}'  shift, and go to state 86


state 67

   29 contentList: content . contentList

    ID          shift, and go to state 56
    TYPEINT     shift, and go to state 57
    TYPEFLOAT   shift, and go to state 58
    TYPESTRING  shift, and go to state 59
    WHILE       shift, and go to state 60
    IF          shift, and go to state 61
    RETURN      shift, and go to state 62
    PRINT       shift, and go to state 63
    SCAN        shift, and go to state 64

    $default  reduce using rule 30 (contentList)

    var          go to state 65
    contentList  go to state 87
    content      go to state 67
    addValue     go to state 68
    comand       go to state 69
    print        go to state 70
    scan         go to state 71
    return       go to state 72
    callFunc     go to state 73


state 68

   32 content: addValue .

    $default  reduce using rule 32 (content)


state 69

   33 content: comand .

    $default  reduce using rule 33 (content)


state 70

   34 content: print .

    $default  reduce using rule 34 (content)


state 71

   35 content: scan .

    $default  reduce using rule 35 (content)


state 72

   36 content: return .

    $default  reduce using rule 36 (content)


state 73

   37 content: callFunc .

    $default  reduce using rule 37 (content)


state 74

   18 func: TYPEFLOAT ID @3 '(' paramsList ')' @4 '{' contentList . '}'

    '}'  shift, and go to state 88


state 75

   15 func: TYPESTRING ID @1 '(' paramsList ')' @2 '{' contentList . '}'

    '}'  shift, and go to state 89


state 76

   38 addValue: ID '=' . expression ';'
   81 callFunc: ID '=' . ID '(' callFuncParams ')' ';'
   83         | ID '=' . ID '(' ')' ';'

    ID   shift, and go to state 90
    INT  shift, and go to state 91
    DEC  shift, and go to state 92
    STR  shift, and go to state 93

    expression  go to state 94


state 77

   80 callFunc: ID '(' . callFuncParams ')' ';'
   82         | ID '(' . ')' ';'

    ID   shift, and go to state 95
    INT  shift, and go to state 96
    DEC  shift, and go to state 97
    STR  shift, and go to state 98
    ')'  shift, and go to state 99

    callFuncParams  go to state 100


state 78

    6 var: TYPEINT ID . ';'
    7    | TYPEINT ID . '=' INT ';'

    ';'  shift, and go to state 14
    '='  shift, and go to state 15


state 79

    8 var: TYPEFLOAT ID . ';'
    9    | TYPEFLOAT ID . '=' INT ';'
   10    | TYPEFLOAT ID . '=' DEC ';'

    ';'  shift, and go to state 17
    '='  shift, and go to state 18


state 80

   11 var: TYPESTRING ID . ';'
   12    | TYPESTRING ID . '=' STR ';'

    ';'  shift, and go to state 20
    '='  shift, and go to state 21


state 81

   53 comand: WHILE '(' . condition ')' '{' contentList '}'

    ID   shift, and go to state 101
    INT  shift, and go to state 102
    DEC  shift, and go to state 103

    condition  go to state 104


state 82

   51 comand: IF '(' . condition ')' '{' contentList '}'
   52       | IF '(' . condition ')' '{' contentList '}' ELSE '{' contentList '}'

    ID   shift, and go to state 101
    INT  shift, and go to state 102
    DEC  shift, and go to state 103

    condition  go to state 105


state 83

   76 return: RETURN '(' . ID ')' ';'
   77       | RETURN '(' . STR ')' ';'
   78       | RETURN '(' . INT ')' ';'
   79       | RETURN '(' . DEC ')' ';'

    ID   shift, and go to state 106
    INT  shift, and go to state 107
    DEC  shift, and go to state 108
    STR  shift, and go to state 109


state 84

   69 print: PRINT '(' . ID ')' ';'
   70      | PRINT '(' . STR ')' ';'
   71      | PRINT '(' . INT ')' ';'
   72      | PRINT '(' . DEC ')' ';'

    ID   shift, and go to state 110
    INT  shift, and go to state 111
    DEC  shift, and go to state 112
    STR  shift, and go to state 113


state 85

   73 scan: SCAN '(' . ID ',' TYPEINT ')' ';'
   74     | SCAN '(' . ID ',' TYPEFLOAT ')' ';'
   75     | SCAN '(' . ID ',' TYPESTRING ')' ';'

    ID  shift, and go to state 114


state 86

   21 func: TYPEINT ID @5 '(' paramsList ')' @6 '{' contentList '}' .

    $default  reduce using rule 21 (func)


state 87

   29 contentList: content contentList .

    $default  reduce using rule 29 (contentList)


state 88

   18 func: TYPEFLOAT ID @3 '(' paramsList ')' @4 '{' contentList '}' .

    $default  reduce using rule 18 (func)


state 89

   15 func: TYPESTRING ID @1 '(' paramsList ')' @2 '{' contentList '}' .

    $default  reduce using rule 15 (func)


state 90

   39 expression: ID .
   43           | ID . op expression
   81 callFunc: ID '=' ID . '(' callFuncParams ')' ';'
   83         | ID '=' ID . '(' ')' ';'

    '('  shift, and go to state 115
    '+'  shift, and go to state 116
    '-'  shift, and go to state 117
    '/'  shift, and go to state 118
    '*'  shift, and go to state 119

    $default  reduce using rule 39 (expression)

    op  go to state 120


state 91

   40 expression: INT .
   44           | INT . op expression

    '+'  shift, and go to state 116
    '-'  shift, and go to state 117
    '/'  shift, and go to state 118
    '*'  shift, and go to state 119

    $default  reduce using rule 40 (expression)

    op  go to state 121


state 92

   41 expression: DEC .
   45           | DEC . op expression

    '+'  shift, and go to state 116
    '-'  shift, and go to state 117
    '/'  shift, and go to state 118
    '*'  shift, and go to state 119

    $default  reduce using rule 41 (expression)

    op  go to state 122


state 93

   42 expression: STR .
   46           | STR . op expression

    '+'  shift, and go to state 116
    '-'  shift, and go to state 117
    '/'  shift, and go to state 118
    '*'  shift, and go to state 119

    $default  reduce using rule 42 (expression)

    op  go to state 123


state 94

   38 addValue: ID '=' expression . ';'

    ';'  shift, and go to state 124


state 95

   84 callFuncParams: ID .
   88               | ID . ',' callFuncParams

    ','  shift, and go to state 125

    $default  reduce using rule 84 (callFuncParams)


state 96

   85 callFuncParams: INT .
   89               | INT . ',' callFuncParams

    ','  shift, and go to state 126

    $default  reduce using rule 85 (callFuncParams)


state 97

   86 callFuncParams: DEC .
   90               | DEC . ',' callFuncParams

    ','  shift, and go to state 127

    $default  reduce using rule 86 (callFuncParams)


state 98

   87 callFuncParams: STR .
   91               | STR . ',' callFuncParams

    ','  shift, and go to state 128

    $default  reduce using rule 87 (callFuncParams)


state 99

   82 callFunc: ID '(' ')' . ';'

    ';'  shift, and go to state 129


state 100

   80 callFunc: ID '(' callFuncParams . ')' ';'

    ')'  shift, and go to state 130


state 101

   54 condition: ID . cond ID
   55          | ID . cond INT
   56          | ID . cond DEC

    CGE  shift, and go to state 131
    CGT  shift, and go to state 132
    CLE  shift, and go to state 133
    CLT  shift, and go to state 134
    CNE  shift, and go to state 135
    CEQ  shift, and go to state 136

    cond  go to state 137


state 102

   57 condition: INT . cond ID
   58          | INT . cond INT
   59          | INT . cond DEC

    CGE  shift, and go to state 131
    CGT  shift, and go to state 132
    CLE  shift, and go to state 133
    CLT  shift, and go to state 134
    CNE  shift, and go to state 135
    CEQ  shift, and go to state 136

    cond  go to state 138


state 103

   60 condition: DEC . cond ID
   61          | DEC . cond INT
   62          | DEC . cond DEC

    CGE  shift, and go to state 131
    CGT  shift, and go to state 132
    CLE  shift, and go to state 133
    CLT  shift, and go to state 134
    CNE  shift, and go to state 135
    CEQ  shift, and go to state 136

    cond  go to state 139


state 104

   53 comand: WHILE '(' condition . ')' '{' contentList '}'

    ')'  shift, and go to state 140


state 105

   51 comand: IF '(' condition . ')' '{' contentList '}'
   52       | IF '(' condition . ')' '{' contentList '}' ELSE '{' contentList '}'

    ')'  shift, and go to state 141


state 106

   76 return: RETURN '(' ID . ')' ';'

    ')'  shift, and go to state 142


state 107

   78 return: RETURN '(' INT . ')' ';'

    ')'  shift, and go to state 143


state 108

   79 return: RETURN '(' DEC . ')' ';'

    ')'  shift, and go to state 144


state 109

   77 return: RETURN '(' STR . ')' ';'

    ')'  shift, and go to state 145


state 110

   69 print: PRINT '(' ID . ')' ';'

    ')'  shift, and go to state 146


state 111

   71 print: PRINT '(' INT . ')' ';'

    ')'  shift, and go to state 147


state 112

   72 print: PRINT '(' DEC . ')' ';'

    ')'  shift, and go to state 148


state 113

   70 print: PRINT '(' STR . ')' ';'

    ')'  shift, and go to state 149


state 114

   73 scan: SCAN '(' ID . ',' TYPEINT ')' ';'
   74     | SCAN '(' ID . ',' TYPEFLOAT ')' ';'
   75     | SCAN '(' ID . ',' TYPESTRING ')' ';'

    ','  shift, and go to state 150


state 115

   81 callFunc: ID '=' ID '(' . callFuncParams ')' ';'
   83         | ID '=' ID '(' . ')' ';'

    ID   shift, and go to state 95
    INT  shift, and go to state 96
    DEC  shift, and go to state 97
    STR  shift, and go to state 98
    ')'  shift, and go to state 151

    callFuncParams  go to state 152


state 116

   47 op: '+' .

    $default  reduce using rule 47 (op)


state 117

   48 op: '-' .

    $default  reduce using rule 48 (op)


state 118

   49 op: '/' .

    $default  reduce using rule 49 (op)


state 119

   50 op: '*' .

    $default  reduce using rule 50 (op)


state 120

   43 expression: ID op . expression

    ID   shift, and go to state 153
    INT  shift, and go to state 91
    DEC  shift, and go to state 92
    STR  shift, and go to state 93

    expression  go to state 154


state 121

   44 expression: INT op . expression

    ID   shift, and go to state 153
    INT  shift, and go to state 91
    DEC  shift, and go to state 92
    STR  shift, and go to state 93

    expression  go to state 155


state 122

   45 expression: DEC op . expression

    ID   shift, and go to state 153
    INT  shift, and go to state 91
    DEC  shift, and go to state 92
    STR  shift, and go to state 93

    expression  go to state 156


state 123

   46 expression: STR op . expression

    ID   shift, and go to state 153
    INT  shift, and go to state 91
    DEC  shift, and go to state 92
    STR  shift, and go to state 93

    expression  go to state 157


state 124

   38 addValue: ID '=' expression ';' .

    $default  reduce using rule 38 (addValue)


state 125

   88 callFuncParams: ID ',' . callFuncParams

    ID   shift, and go to state 95
    INT  shift, and go to state 96
    DEC  shift, and go to state 97
    STR  shift, and go to state 98

    callFuncParams  go to state 158


state 126

   89 callFuncParams: INT ',' . callFuncParams

    ID   shift, and go to state 95
    INT  shift, and go to state 96
    DEC  shift, and go to state 97
    STR  shift, and go to state 98

    callFuncParams  go to state 159


state 127

   90 callFuncParams: DEC ',' . callFuncParams

    ID   shift, and go to state 95
    INT  shift, and go to state 96
    DEC  shift, and go to state 97
    STR  shift, and go to state 98

    callFuncParams  go to state 160


state 128

   91 callFuncParams: STR ',' . callFuncParams

    ID   shift, and go to state 95
    INT  shift, and go to state 96
    DEC  shift, and go to state 97
    STR  shift, and go to state 98

    callFuncParams  go to state 161


state 129

   82 callFunc: ID '(' ')' ';' .

    $default  reduce using rule 82 (callFunc)


state 130

   80 callFunc: ID '(' callFuncParams ')' . ';'

    ';'  shift, and go to state 162


state 131

   63 cond: CGE .

    $default  reduce using rule 63 (cond)


state 132

   64 cond: CGT .

    $default  reduce using rule 64 (cond)


state 133

   65 cond: CLE .

    $default  reduce using rule 65 (cond)


state 134

   66 cond: CLT .

    $default  reduce using rule 66 (cond)


state 135

   67 cond: CNE .

    $default  reduce using rule 67 (cond)


state 136

   68 cond: CEQ .

    $default  reduce using rule 68 (cond)


state 137

   54 condition: ID cond . ID
   55          | ID cond . INT
   56          | ID cond . DEC

    ID   shift, and go to state 163
    INT  shift, and go to state 164
    DEC  shift, and go to state 165


state 138

   57 condition: INT cond . ID
   58          | INT cond . INT
   59          | INT cond . DEC

    ID   shift, and go to state 166
    INT  shift, and go to state 167
    DEC  shift, and go to state 168


state 139

   60 condition: DEC cond . ID
   61          | DEC cond . INT
   62          | DEC cond . DEC

    ID   shift, and go to state 169
    INT  shift, and go to state 170
    DEC  shift, and go to state 171


state 140

   53 comand: WHILE '(' condition ')' . '{' contentList '}'

    '{'  shift, and go to state 172


state 141

   51 comand: IF '(' condition ')' . '{' contentList '}'
   52       | IF '(' condition ')' . '{' contentList '}' ELSE '{' contentList '}'

    '{'  shift, and go to state 173


state 142

   76 return: RETURN '(' ID ')' . ';'

    ';'  shift, and go to state 174


state 143

   78 return: RETURN '(' INT ')' . ';'

    ';'  shift, and go to state 175


state 144

   79 return: RETURN '(' DEC ')' . ';'

    ';'  shift, and go to state 176


state 145

   77 return: RETURN '(' STR ')' . ';'

    ';'  shift, and go to state 177


state 146

   69 print: PRINT '(' ID ')' . ';'

    ';'  shift, and go to state 178


state 147

   71 print: PRINT '(' INT ')' . ';'

    ';'  shift, and go to state 179


state 148

   72 print: PRINT '(' DEC ')' . ';'

    ';'  shift, and go to state 180


state 149

   70 print: PRINT '(' STR ')' . ';'

    ';'  shift, and go to state 181


state 150

   73 scan: SCAN '(' ID ',' . TYPEINT ')' ';'
   74     | SCAN '(' ID ',' . TYPEFLOAT ')' ';'
   75     | SCAN '(' ID ',' . TYPESTRING ')' ';'

    TYPEINT     shift, and go to state 182
    TYPEFLOAT   shift, and go to state 183
    TYPESTRING  shift, and go to state 184


state 151

   83 callFunc: ID '=' ID '(' ')' . ';'

    ';'  shift, and go to state 185


state 152

   81 callFunc: ID '=' ID '(' callFuncParams . ')' ';'

    ')'  shift, and go to state 186


state 153

   39 expression: ID .
   43           | ID . op expression

    '+'  shift, and go to state 116
    '-'  shift, and go to state 117
    '/'  shift, and go to state 118
    '*'  shift, and go to state 119

    $default  reduce using rule 39 (expression)

    op  go to state 120


state 154

   43 expression: ID op expression .

    $default  reduce using rule 43 (expression)


state 155

   44 expression: INT op expression .

    $default  reduce using rule 44 (expression)


state 156

   45 expression: DEC op expression .

    $default  reduce using rule 45 (expression)


state 157

   46 expression: STR op expression .

    $default  reduce using rule 46 (expression)


state 158

   88 callFuncParams: ID ',' callFuncParams .

    $default  reduce using rule 88 (callFuncParams)


state 159

   89 callFuncParams: INT ',' callFuncParams .

    $default  reduce using rule 89 (callFuncParams)


state 160

   90 callFuncParams: DEC ',' callFuncParams .

    $default  reduce using rule 90 (callFuncParams)


state 161

   91 callFuncParams: STR ',' callFuncParams .

    $default  reduce using rule 91 (callFuncParams)


state 162

   80 callFunc: ID '(' callFuncParams ')' ';' .

    $default  reduce using rule 80 (callFunc)


state 163

   54 condition: ID cond ID .

    $default  reduce using rule 54 (condition)


state 164

   55 condition: ID cond INT .
